intTests/test_type_errors/err050.saw
// Make sure experimental primitives are hidden by default, and test
// the associated message.
//
// This can be anything experimental; if you need to change it because
// the thing I picked ceases to be experimental, just update the
// reference file accordingly.

let _ = implies_term;

